--- a/index.html
+++ b/index.html
@@ -292,6 +292,6 @@
             </button>
         </div>
         <div id="container"></div>
-        <script type="module" src="/main.js"></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
