adjust import source

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
                     sapiente alias mollitia.
                 </div>
-                <img src="/assets/images/1.webp" width="400" />
+                <img src="./assets/images/1.webp" width="400" />
                 <p class="content">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
                     sapiente alias mollitia. Dolore libero ea cum, neque quo
@@ -233,31 +233,31 @@
         <div id="slider-wrapper">
             <div id="slider">
                 <div class="slider-item active">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
                 <div class="slider-item">
-                    <img src="/assets/images/1.webp" alt width="200" />
+                    <img src="./assets/images/1.webp" alt width="200" />
                 </div>
             </div>
             <button class="slider-btn-left" id="slider-btn-pre">
